# repopilot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MEMO.md  Makefile  README.md  SUBMISSION.md  benchmark_report.md  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_create_runs_table.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/components/: activity-feed.tsx  artifact-panel.tsx  dashboard-client.tsx  new-run-dialog.tsx  phase-badge.tsx  sidebar.tsx
dashboard/lib/: api.ts  time.ts  types.ts
repopilot/: __init__.py  errors.py  github_auth.py  github_pr.py  llm.py  state.py  state_store.py
repopilot/agents/: architecture.py  discovery.py  documentation.py  implementation.py  knowledge.py  planning.py  pr_generation.py  reflection.py  validation.py
repopilot/api/: main.py
repopilot/api/middleware/: __init__.py  rate_limit.py
repopilot/api/routers/: health.py  runs.py
repopilot/db/: engine.py  init_db.py  models.py  store.py
repopilot/evaluation/: metrics.py  run.py  runner.py  tasks.py
repopilot/graph/: knowledge_graph.py  workflow.py
repopilot/observability/: __init__.py  logging.py  tracing.py
repopilot/static/: index.html
repopilot/tools/: __init__.py  base.py  executor.py  subagent.py
scripts/: README.md  install_rate_limit_deps.sh
tests/: conftest.py  test_api.py  test_documentation_agent.py  test_evaluation.py  test_github_pr.py  test_implementation_agent.py  test_pr_agent.py  test_reflection_agent.py  test_resilience.py  test_state.py  test_state_store_db.py  test_tools.py  test_validation_agent.py
(+52 files in other folders)
